Refs #8514 Fixes issue where setting a datastore after one has been previously set causes an error to be thrown.  Also fixes positioning bug where the play button in the slideshow was not centered correctly.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@20288 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/image/resources/SlideShow.css
+++ b/image/resources/SlideShow.css
@@ -7,7 +7,6 @@
 	border:1px solid #333;	
 	padding-bottom:20px;
 	overflow:hidden;
-	text-align: center;
 	-moz-border-radius:3pt;
 	-webkit-border-radius:4pt;
 	-webkit-drop-shadow:#ccc 4pt; 
