--- a/image/resources/ThumbnailPicker.css
+++ b/image/resources/ThumbnailPicker.css
@@ -87,7 +87,6 @@
 .thumbScroller {
 	overflow-x: hidden;
 	overflow-y: hidden;
-	white-space: nowrap;
 	text-align: center;
 }
 
